--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "17.0.0",
   "private": true,
   "description": "Проект «Киноман» от HTML Academy",
+  "browserslist": [
+    "last 2 versions",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all",
+    "not < 0.25%"
+  ],
   "scripts": {
     "lint": "eslint src/",
     "build": "webpack --mode production",
@@ -18,6 +25,9 @@
     "node": "16"
   },
   "dependencies": {
+    "@babel/core": "7.17.9",
+    "@babel/preset-env": "7.16.11",
+    "babel-loader": "^8.2.5",
     "webpack": "5.72.0",
     "webpack-cli": "4.9.2"
   }
